# notion-cli-py

./: LISENSE  README.md  README.rst  pyproject.toml
files/: simple_block.json  simple_database.json  simple_page.json  simple_query.json  simple_search.json  simple_update_block.json  simple_update_database.json  simple_update_page.json  template_archive_page.json  template_archive_page_1.json  template_get_database.json  template_get_database_1.json  template_search_1.json  template_update_page_1.json
notion_cli_py/: cli.py
notion_cli_py/client/: client.py
notion_cli_py/configure/: configure.py
notion_cli_py/operations/: append.py  create.py  delete.py  get.py  query.py  search.py  update.py
notion_cli_py/utils/: confirm.py  input_handler.py  logger.py  read_file.py
tests/: test_notion_cli_py.py
