[tool.poetry]
name = "notion-cli-py"
version = "1.0.0"
description = "NotionCLI - The CLI tool for Notion.co (https://www.notion.so/ja-jp/product)."
authors = ["Tomonori HIRATA <tomonori4565@icloud.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fieldflat"
repository = "https://github.com/fieldflat/notion-cli-py"

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.4.0"
tabulate = "^0.8.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
notion-cli = "notion_cli_py.cli:main"